Added logos to assets folder | Removed need for popup window

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,16 @@
 {
-	"name": "AdBlock Detection Prevention",
+	"name": "AdBlock Detector Bypass",
 	"version": "1.0",
-	"description": "Bypass adblock detection",
-	"browser_action": {
-		"default_popup": "popup.html"
+	"description": "Removes the obtrusive popup that prevents you from viewing webpage content when an adblocker is detected",
+	"background" : {
+		"scripts" : ["background.js"]
 	},
 	"permissions": ["tabs", "<all_urls>"],
-	"icons": {  "16": "abdb.logo.16.png",
-				"48": "abdb.logo.48.png",
-				"128": "abdb.logo.128.png" },
+	"icons": {  "16": "assets/abdb.logo.16.png",
+				"48": "assets/abdb.logo.48.png",
+				"128": "assets/abdb.logo.128.png"},
+	"browser_action": {
+		"default_icon": "assets/abdb.logo.16.png"
+	},
 	"manifest_version": 2
 }
